--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <link rel="icon" sizes="192x192" href="images/u2EUd5BGt3yi.png">
    <link rel="apple-touch-icon" sizes="192x192" href="images/u2EUd5BGt3yi.png">
    <link rel="shortcut icon" href="images/u2EUd5BGt3yi.png" type="image/x-icon">
-   <title>Bikkgane Biryani - Online Ordering</title>
+   <title>Biriyani Feast - Online Ordering</title>
    <meta name="description" content="Order Online from Your Favorite Bikkgane Biryani  - Powered By Uengage">
    <link rel="canonical" href="./">
    <link rel="manifest" href="/manifest.json">
