--- a/about.html
+++ b/about.html
@@ -23,12 +23,12 @@
    <meta name="theme-color" content="#ffbc01">
    <link rel="shortcut icon" href="images/e9ZJO422N3NN.png">
    <!-- <link rel="icon" href="https://www.uengage.in/images/addo/logos/logo-23764-1698942464.png"> -->
-   <link rel="icon" sizes="192x192" href="images/e9ZJO422N3NN.png">
+<!--    <link rel="icon" sizes="192x192" href="images/e9ZJO422N3NN.png"> -->
    <link rel="apple-touch-icon" sizes="192x192" href="images/e9ZJO422N3NN.png">
    <link rel="shortcut icon" href="images/e9ZJO422N3NN.png" type="image/x-icon">
-   <title>About Bikkgane Biryani </title>
+   <title>About Biriyani Feast </title>
    <meta name="description" content="About Us">
-   <link rel="canonical" href="./about">
+   <link rel="canonical" href="./about.html">
    <link rel="manifest" href="/manifest.json">
    <meta name="robots" content="index, follow">
    <link rel="icon" href="images/e9ZJO422N3NN.png" type="image/jpg" sizes="16x16">
@@ -38,9 +38,9 @@
 
 
 
-   <meta property="og:title" content="About Bikkgane Biryani ">
+   <meta property="og:title" content="About Biryani Feast">
    <meta property="og:type" content="website">
-   <meta property="og:site_name" content="Bikkgane Biryani">
+   <meta property="og:site_name" content="Biryani">
    <meta property="og:image" content="images/e9ZJO422N3NN.png">
    <meta property="og:image:alt" content="About Bikkgane Biryani ">
 
