SEO Update index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <link rel="apple-touch-icon" sizes="192x192" href="images/u2EUd5BGt3yi.png">
    <link rel="shortcut icon" href="images/u2EUd5BGt3yi.png" type="image/x-icon">
    <title>Biriyani Feast - Online Ordering</title>
-   <meta name="description" content="Order Online from Your Favorite Bikkgane Biryani  - Powered By Uengage">
+   <meta name="description" content="Order Online from Your Favorite Biryani Feast  - Powered By Uengage">
    <link rel="canonical" href="./">
    <link rel="manifest" href="/manifest.json">
    <meta name="robots" content="index, follow">
@@ -38,11 +38,11 @@
 
 
 
-   <meta property="og:title" content="Bikkgane Biryani - Online Ordering">
+   <meta property="og:title" content="Biryani Feast - Online Ordering">
    <meta property="og:type" content="website">
-   <meta property="og:site_name" content="Bikkgane Biryani">
+   <meta property="og:site_name" content="Biryani Feast">
    <meta property="og:image" content="images/u2EUd5BGt3yi.png">
-   <meta property="og:image:alt" content="Bikkgane Biryani - Online Ordering">
+   <meta property="og:image:alt" content="Biryani Feast - Online Ordering">
 
    <meta property="og:url" content="./">
    <meta property="og:description" content="Order Online from Your Favorite Bikkgane Biryani  - Powered By Uengage">
