--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <link rel="apple-touch-icon" sizes="192x192" href="images/u2EUd5BGt3yi.png">
    <link rel="shortcut icon" href="images/u2EUd5BGt3yi.png" type="image/x-icon">
    <title>Biriyani Feast - Online Ordering</title>
-   <meta name="description" content="Order Online from Your Favorite Biryani Feast  - Powered By Uengage">
+   <meta name="description" content="Order Online from Your Favorite Biriyani Feast  - Powered By Uengage">
    <link rel="canonical" href="./">
    <link rel="manifest" href="/manifest.json">
    <meta name="robots" content="index, follow">
@@ -38,18 +38,18 @@
 
 
 
-   <meta property="og:title" content="Biryani Feast - Online Ordering">
+   <meta property="og:title" content="Biriyani Feast - Online Ordering">
    <meta property="og:type" content="website">
-   <meta property="og:site_name" content="Biryani Feast">
+   <meta property="og:site_name" content="Biriyani Feast">
    <meta property="og:image" content="images/u2EUd5BGt3yi.png">
-   <meta property="og:image:alt" content="Biryani Feast - Online Ordering">
+   <meta property="og:image:alt" content="Biriyani Feast - Online Ordering">
 
    <meta property="og:url" content="./">
-   <meta property="og:description" content="Order Online from Your Favorite Bikkgane Biryani  - Powered By Uengage">
+   <meta property="og:description" content="Order Online from Your Favorite Biriyani Feast  - Powered By Uengage">
 
    <meta name="twitter:card" content="summary">
-   <meta name="twitter:title" content="Bikkgane Biryani - Online Ordering">
-   <meta name="twitter:description" content="Order Online from Your Favorite Bikkgane Biryani  - Powered By Uengage">
+   <meta name="twitter:title" content="Biriyani Feast - Online Ordering">
+   <meta name="twitter:description" content="Order Online from Your Favorite Biriyani Feast  - Powered By Uengage">
    <meta property="twitter:image" content="https://www.uengage.in/images/addo/logos/logo-23764-1698942464.png">
 
 
@@ -58,8 +58,8 @@
    {
    "@context": "https://schema.org",
    "@type": "Organization",
-   "name": "Bikkgane Biryani",
-   "alternateName": "Bikkgane Biryani",
+   "name": "Biriyani Feast",
+   "alternateName": "Biriyani Feast",
    "url": "./",
    "logo": "https://www.uengage.in/images/addo/logos/logo-23764-1698942464.png",
    "sameAs": [
@@ -85,6 +85,7 @@
       :root {
          --secondary-bg-color: #ffffff;
       }
+
       body {
          font-size: 14px !important;
       }
@@ -125,7 +126,7 @@
       }
 
 
-      
+
 
       .g-recaptcha {
          margin-top: 15px;
@@ -207,7 +208,7 @@
                   <span id="errorMessageLogin"></span>
                </div>
                <div class="modal-body">
-                  <!--<img src="https://www.uengage.in/images/addo/logos/logo-23764-1698942464.png" alt="Bikkgane Biryani" width="500" height="170" class="logos">-->
+                  <!--<img src="https://www.uengage.in/images/addo/logos/logo-23764-1698942464.png" alt="Biriyani Feast" width="500" height="170" class="logos">-->
                   <p class="mb-2 login-common-heading">Login to continue</p>
                   <p class="mb-3">You will receive a text message to verify your account.</p>
                   <form class="form-email mb-0">
@@ -1250,10 +1251,14 @@
             <div style="background:#000000!important;color:#ffffff !Important">
                <div class="container" style="background:#000000!important;color:#ffffff !Important;min-height: 4.5em;">
                   <a href="./" class="custom-logo-link d-none d-md-flex" rel="home">
-                     <span style=" font-family: 'poppins', sans-serif; color: crimson; font-weight: 700; font-size: 21px;">Biriyani&nbsp;</span> <span style="color: #fff; font-size: 20px; font-family: cursive; background: #000;">Feast</span>
+                     <span
+                        style=" font-family: 'poppins', sans-serif; color: crimson; font-weight: 700; font-size: 21px;">Biriyani&nbsp;</span>
+                     <span style="color: #fff; font-size: 20px; font-family: cursive; background: #000;">Feast</span>
                   </a>
                   <a href="./" class="custom-logo-link d-block d-md-none" rel="home">
-                     <span style=" font-family: 'poppins', sans-serif; color: crimson; font-weight: 700; font-size: 21px;">Biriyani&nbsp;</span> <span style="color: #fff; font-size: 20px; font-family: cursive; background: #000;">Feast</span>
+                     <span
+                        style=" font-family: 'poppins', sans-serif; color: crimson; font-weight: 700; font-size: 21px;">Biriyani&nbsp;</span>
+                     <span style="color: #fff; font-size: 20px; font-family: cursive; background: #000;">Feast</span>
                   </a>
 
                   <button class="navbar-toggler wrapper-menu p-0" type="button" data-toggle="collapse"
@@ -1323,8 +1328,7 @@
                            <div class="row">
 
                               <div class="col-12 ">
-                                 <a class="nav-link page-scroll btn btn-primary border-only"
-                                    href="./online-order">
+                                 <a class="nav-link page-scroll btn btn-primary border-only" href="./online-order">
                                     Order Online</a>
                               </div>
                               <div class="col-12 mt-3">
@@ -1515,7 +1519,7 @@
 
       <!-- banner start -->
       <!--
-<h1 style="display:none">Bikkgane Biryani</h1>
+<h1 style="display:none">Biriyani Feast</h1>
 -->
       <div id="content" class="site-content" tabindex="-1">
          <div class="col-full">
@@ -1746,8 +1750,7 @@
                            <div class="col-md-6">
                               <h3 class="wla_section_heading custom-color">About Biryani Feast</h3>
                               <p><span style="font-size: 14px;">"In a world where "authentic
-                                    biryani" is used more as a phrase rather than served as a dish, we at Bikkgane
-                                    Biryani have made it our goal to serve truly authentic, Hyderabadi Biryani to those
+                                    biryani" is used more as a phrase rather than served as a dish, we at Biriyani Feast have made it our goal to serve truly authentic, Hyderabadi Biryani to those
                                     who know the taste that goes with that promise. Using the finest ingredients, our
                                     chefs cook a vast array of Tikkas, Kebabs and Curries, which are specially chosen to
                                     complement our world class Biryani selection. All of this is also available together
@@ -2122,8 +2125,7 @@
 
                      <h6>Address</h6>
 
-                     <p class="mb-0 text-white pt-3">Kkay Enterprises FIRST FLOOR, 117, The Bristol Hotel, MEHRUALI
-                        GURUGRAM ROAD, EDMONNTON SHOPPING MALL, DLF PHASE 2, Gurugram, Gurugram, Haryana, 122002</p>
+                     <p class="mb-0 text-white pt-3">SRABONI BLOCK-236, Kshudiram Nagar, Haldia, West Bengal 721657</p>
 
                   </div>
                   <div class="col-md-3 col-12 pl-2 pl-md-3 pr-2 pr-md-3 mt-3 mt-md-0">
@@ -2155,7 +2157,7 @@
                                  <g></g>
                                  <g></g>
                                  <g></g>
-                              </svg> 8468005769</a>
+                              </svg> +91 9475 863 170</a>
                         </li>
 
                      </ul>
@@ -2169,7 +2171,7 @@
                         <h6>Follow Us</h6>
 
                         <p class="mb-0 pt-3 pt-md-3 white-icons">
-                           <a href="https://www.facebook.com/bikkganebiryani/" target="_blank"
+                           <a href="https://www.facebook.com/biriyanifeast/" target="_blank"
                               aria-label="Facebook"><svg style="border-radius: 50%;" xmlns="http://www.w3.org/2000/svg"
                                  width="57" height="57" viewBox="0 0 57 57" fill="none">
                                  <path
@@ -2180,7 +2182,7 @@
                                     fill="var(--main-bg-color)"></path>
                               </svg></a>
 
-                           <a href="https://www.instagram.com/bikkgane_biryani/" target="_blank" aria-label="Instagram">
+                           <a href="https://www.instagram.com/biriyani.feast/" target="_blank" aria-label="Instagram">
                               <svg style="border-radius: 50%;" xmlns="http://www.w3.org/2000/svg"
                                  xmlns:xlink="http://www.w3.org/1999/xlink" width="57" height="57" viewBox="0 0 57 57"
                                  fill="none">
@@ -2224,20 +2226,6 @@
                            </a>
 
 
-                           <a href="https://www.youtube.com/channel/UCZVaDNFnZs9I0K43RXcnlDA" target="_blank"
-                              aria-label="Youtube">
-                              <svg style="border-radius: 50%;" xmlns="http://www.w3.org/2000/svg" width="56" height="56"
-                                 viewBox="0 0 56 56" fill="none">
-                                 <path
-                                    d="M27.9475 55.689C43.1314 55.689 55.4404 43.38 55.4404 28.1961C55.4404 13.0121 43.1314 0.703125 27.9475 0.703125C12.7636 0.703125 0.45459 13.0121 0.45459 28.1961C0.45459 43.38 12.7636 55.689 27.9475 55.689Z"
-                                    fill="var(--secondary-bg-color)"></path>
-                                 <path
-                                    d="M42.672 24.2099C42.672 20.5618 39.7196 17.6094 36.0715 17.6094H19.1845C15.5364 17.6094 12.584 20.5618 12.584 24.2099V32.0704C12.584 35.7186 15.5364 38.671 19.1845 38.671H36.0715C39.7196 38.671 42.672 35.7186 42.672 32.0704V24.2099ZM32.743 28.7231L25.1645 32.4653C24.8637 32.6346 23.867 32.4089 23.867 32.0704V24.3792C23.867 24.0407 24.8825 23.815 25.1833 23.9843L32.4233 27.9333C32.7242 28.1214 33.0438 28.5539 32.743 28.7231Z"
-                                    fill="var(--main-bg-color)"></path>
-                              </svg>
-                           </a>
-
-
                         </p>
                      </div>
                   </div>
@@ -2248,7 +2236,9 @@
          <div class="footer-bottom pt-2 pb-2 text-center" style="background-color: #fff;">
             <div class="container">
                <p class="mb-2 mb-md-0 d-block d-md-inline-block" style="font-weight: 600; color: var(--main-bg-color);">
-                  <a href="https://paaisoft.com/" target="_blank">Powered By <strong style="color: green;">paaisoft.com</strong></a></p>
+                  <a href="https://paaisoft.com/" target="_blank">Powered By <strong
+                        style="color: green;">paaisoft.com</strong></a>
+               </p>
 
                <p class="ml-0 ml-md-3 mb-0 d-block d-md-inline-block" style="color: #000;font-weight: 600;"><img
                      src="images/icJ2tlumDPYN.svg" alt="Copyright Icon" width="30" height="30"
@@ -2260,9 +2250,9 @@
 					<div class="d-flex align-items-center justify-content-end">
 						<p class="mb-0 mr-2">Follow Us :</p>
 						<p class="mb-0">
-				 					  <a href="https://www.facebook.com/bikkganebiryani/" target="_blank" ><img src="./assets/wla_new/img/footer/facebook.svg" alt="Bikkgane Biryani on facebook" width="23" height="23" style="display: inline-block;"></a></a>
-				  				  				  <a href="https://www.instagram.com/bikkgane_biryani/" target="_blank" ><img src="./assets/wla_new/img/footer/instagram.svg" alt="Bikkgane Biryani on instagram" width="23" height="23" style="display: inline-block;"></a>
-				  				  				  <a href="https://www.youtube.com/channel/UCZVaDNFnZs9I0K43RXcnlDA" target="_blank" ><img src="./assets/wla_new/img/footer/youtube.svg" alt="Bikkgane Biryani on youtube" width="23" height="23" style="display: inline-block;"></a>
+				 					  <a href="https://www.facebook.com/bikkganebiryani/" target="_blank" ><img src="./assets/wla_new/img/footer/facebook.svg" alt="Biriyani Feast on facebook" width="23" height="23" style="display: inline-block;"></a></a>
+				  				  				  <a href="https://www.instagram.com/bikkgane_biryani/" target="_blank" ><img src="./assets/wla_new/img/footer/instagram.svg" alt="Biriyani Feast on instagram" width="23" height="23" style="display: inline-block;"></a>
+				  				  				  <a href="https://www.youtube.com/channel/UCZVaDNFnZs9I0K43RXcnlDA" target="_blank" ><img src="./assets/wla_new/img/footer/youtube.svg" alt="Biriyani Feast on youtube" width="23" height="23" style="display: inline-block;"></a>
 				  				  				  				  						</p>
 					</div>
 				</div>-->
@@ -2597,7 +2587,7 @@
             var truecaller_key = "1CcwSd888aa952f454e24abdd009fe38a1c62";
             var paytm_mId = '';
             var cart;
-            var businessName = 'Bikkgane Biryani';
+            var businessName = 'Biriyani Feast';
             var logo = 'https://www.uengage.in/images/addo/logos/logo-23764-1698942464.png';
             var item = {};
             var templates;
