--- a/about.html
+++ b/about.html
@@ -21,17 +21,17 @@
 
    <meta name="author" content="uEngage">
    <meta name="theme-color" content="#ffbc01">
-   <link rel="shortcut icon" href="images/e9ZJO422N3NN.png">
+   <link rel="shortcut icon" href="./images/biriyani-feast-logo.jpg">
    <!-- <link rel="icon" href="https://www.uengage.in/images/addo/logos/logo-23764-1698942464.png"> -->
-   <link rel="icon" sizes="192x192" href="images/e9ZJO422N3NN.png">
-   <link rel="apple-touch-icon" sizes="192x192" href="images/e9ZJO422N3NN.png">
-   <link rel="shortcut icon" href="images/e9ZJO422N3NN.png" type="image/x-icon">
+   <link rel="icon" sizes="192x192" href="./images/biriyani-feast-logo.jpg">
+   <link rel="apple-touch-icon" sizes="192x192" href="./images/biriyani-feast-logo.jpg">
+   <link rel="shortcut icon" href="./images/biriyani-feast-logo.jpg" type="image/x-icon">
    <title>About Biriyani Feast </title>
    <meta name="description" content="About Us">
    <link rel="canonical" href="./about">
    <link rel="manifest" href="/manifest.json">
    <meta name="robots" content="index, follow">
-   <link rel="icon" href="images/e9ZJO422N3NN.png" type="image/jpg" sizes="16x16">
+   <link rel="icon" href="./images/biriyani-feast-logo.jpg" type="image/jpg" sizes="16x16">
 
    <meta name="ondc-site-verification"
       content="JXXJEMTFg79fgVvA8jpjSn2KQR4kTwJ444PKTEnplZ77WQDEf5ATXk34JsMtsBZIi2rOzwUYbXif7qB50eVgCg==">
@@ -41,7 +41,7 @@
    <meta property="og:title" content="About Biriyani Feast ">
    <meta property="og:type" content="website">
    <meta property="og:site_name" content="Biriyani Feast">
-   <meta property="og:image" content="images/e9ZJO422N3NN.png">
+   <meta property="og:image" content="./images/biriyani-feast-logo.jpg">
    <meta property="og:image:alt" content="About Biriyani Feast ">
 
    <meta property="og:url" content="./about">
@@ -67,7 +67,7 @@
    "url": "./",
    "logo": "https://www.uengage.in/images/addo/logos/logo-23764-1698942464.png",
    "sameAs": [
-          "https://www.facebook.com/bikkganebiryani/",                   "https://www.instagram.com/bikkgane_biryani/"      ]
+          "https://www.facebook.com/biriyanifeast/",                   "https://www.instagram.com/bikkgane_biryani/"      ]
    }
 </script>
    <link rel="preload"
@@ -180,7 +180,7 @@
          <div class="spinner-border">
             <span class="sr-only">Loading...</span>
          </div>
-         <img src="images/e9ZJO422N3NN.png" alt="Logo" width="50" height="50" loading="lazy">
+         <img src="./images/biriyani-feast-logo.jpg" alt="Logo" width="50" height="50" loading="lazy">
       </div>
    </div>
 
@@ -1307,41 +1307,10 @@
                         </li>
                         <li class="nav-item active">
 
-                           <a class="nav-link page-scroll" href="./store-locator">
-                              <span>Store Locator</span>
+                           <a class="nav-link page-scroll" href="./dishes.html">
+                              <span>Dishes</span>
                               <i class="las la-angle-right"></i></a>
 
-                        </li>
-                        <li class="nav-item active">
-
-                           <a class="nav-link page-scroll" href="./online-order">
-                              <span>Order Now</span>
-                              <i class="las la-angle-right"></i></a>
-
-                        </li>
-                        <li class="nav-item active">
-
-                           <a class="nav-link page-scroll" href="./gallery">
-                              <span>Gallery</span>
-                              <i class="las la-angle-right"></i></a>
-
-                        </li>
-                        <li class="nav-item login-outer active">
-                           <div class="row">
-
-                              <div class="col-12 ">
-                                 <a class="nav-link page-scroll btn btn-primary border-only" href="./online-order">
-                                    Order Online</a>
-                              </div>
-                              <div class="col-12 mt-3">
-                                 <a class="nav-link page-scroll btn btn-primary" href="https://uen.io/bikkganebiryani"
-                                    style="color:#fff !important">
-                                    Download The App</a>
-                                 <span style="color: #000;
-                                 display: block;
-                                 margin-top: 5px;">Get App Exclusive Discounts</span>
-                              </div>
-                           </div>
                         </li>
                      </ul>
                      <div class="bottomsidenav d-inline d-md-none pt-0">
@@ -1679,28 +1648,13 @@
                      </ul>
                   </div>
                   <div class="col-md-2 col-6 pl-2 pl-md-3 pr-2 pr-md-3">
-                     <h6>Payment Methods</h6>
-
-                     <ul class="payments-ul pt-3">
-                        <li>
-                           <img src="images/A5pbYzzK6T2M.svg" width="50" height="30" alt="cash icon" loading="lazy">
-                           <img src="images/DDsNdx42wQlW.svg" width="50" height="30" alt="Master Card" loading="lazy">
-                           <img src="images/AxkkMqQiA8l1.svg" width="50" height="30" alt="Google Pay" loading="lazy">
-
-
-                           <img src="images/3aSmcS0RZ3zi.svg" width="50" height="30" alt="Paytm" loading="lazy">
-                           <img src="images/I1EBahK0DiXi.svg" width="50" height="30" alt="Visa" loading="lazy">
-                           <img src="images/9lad70ha3wRC.svg" width="50" height="30" alt="UPI" loading="lazy">
-
-                        </li>
-                     </ul>
 
 
                      <div class="class-follow mt-2 mt-md-0 d-block d-md-none">
                         <h6>Follow Us</h6>
 
                         <p class="mb-0 pt-3 pt-md-3 white-icons">
-                           <a href="https://www.facebook.com/bikkganebiryani/" target="_blank" aria-label="Facebook"
+                           <a href="https://www.facebook.com/biriyanifeast/" target="_blank" aria-label="Facebook"
                               class="fb_link"><svg style="border-radius: 50%;" xmlns="http://www.w3.org/2000/svg"
                                  width="57" height="57" viewBox="0 0 57 57" fill="none">
                                  <path
@@ -1815,6 +1769,32 @@
                               </svg> +91 9475 863 170</a>
                         </li>
 
+                        <!-- email -->
+                        <li style="margin-top: 20px;">
+                           <a class="emailLink" style="display:block" href="mailto:customercare@biriyanifeast.com">
+                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" style="width: 20px;">
+                                 <defs>
+                                    <style>
+                                       .cls-1 {
+                                          fill: #fff
+                                       }
+                                    </style>
+                                 </defs>
+                                 <g id="Layer_2" data-name="Layer 2">
+                                    <g id="layer_1-2" data-name="layer 1">
+                                       <path class="cls-1"
+                                          d="M35 48H13A13 13 0 0 1 0 35V13A13 13 0 0 1 13 0h22a13 13 0 0 1 13 13v22a13 13 0 0 1-13 13zM13 2A11 11 0 0 0 2 13v22a11 11 0 0 0 11 11h22a11 11 0 0 0 11-11V13A11 11 0 0 0 35 2z" />
+                                       <path class="cls-1"
+                                          d="M39 36H9a1 1 0 0 1-1-1V13a1 1 0 0 1 1-1h30a1 1 0 0 1 1 1v22a1 1 0 0 1-1 1zm-29-2h28V14H10z" />
+                                       <path class="cls-1"
+                                          d="M24 28a1 1 0 0 1-.68-.27l-15-14A1 1 0 0 1 9 12h30a1 1 0 0 1 .68 1.73l-15 14A1 1 0 0 1 24 28zM11.54 14 24 25.63 36.46 14z" />
+                                       <path class="cls-1"
+                                          d="M39 36H9a1 1 0 0 1-.68-1.73l11.78-11 1.37 1.46L11.54 34h24.92l-9.93-9.27 1.37-1.46 11.78 11A1 1 0 0 1 39 36z" />
+                                    </g>
+                                 </g>
+                              </svg>
+                              customercare@biriyanifeast.com</a>
+                        </li>
                      </ul>
 
 
@@ -1905,7 +1885,7 @@
 					<div class="d-flex align-items-center justify-content-end">
 						<p class="mb-0 mr-2">Follow Us :</p>
 						<p class="mb-0">
-				 					  <a href="https://www.facebook.com/bikkganebiryani/" target="_blank" ><img src="./assets/wla_new/img/footer/facebook.svg" alt="Biriyani Feast on facebook" width="23" height="23" style="display: inline-block;"></a></a>
+				 					  <a href="https://www.facebook.com/biriyanifeast/" target="_blank" ><img src="./assets/wla_new/img/footer/facebook.svg" alt="Biriyani Feast on facebook" width="23" height="23" style="display: inline-block;"></a></a>
 				  				  				  <a href="https://www.instagram.com/bikkgane_biryani/" target="_blank" ><img src="./assets/wla_new/img/footer/instagram.svg" alt="Biriyani Feast on instagram" width="23" height="23" style="display: inline-block;"></a>
 				  				  				  <a href="https://www.youtube.com/channel/UCZVaDNFnZs9I0K43RXcnlDA" target="_blank" ><img src="./assets/wla_new/img/footer/youtube.svg" alt="Biriyani Feast on youtube" width="23" height="23" style="display: inline-block;"></a>
 				  				  				  				  						</p>
