--- a/dishes.html
+++ b/dishes.html
@@ -26,7 +26,7 @@
     <link rel="icon" sizes="192x192" href="./images/biriyani-feast-logo.jpg">
     <link rel="apple-touch-icon" sizes="192x192" href="./images/biriyani-feast-logo.jpg">
     <link rel="shortcut icon" href="./images/biriyani-feast-logo.jpg" type="image/x-icon">
-    <title>Biriyani Feast - Online Ordering</title>
+    <title>Biriyani Feast - Dishes</title>
     <meta name="description" content="Order Online from Your Favorite Biriyani Feast  - Powered By Uengage">
     <link rel="canonical" href="./">
     <link rel="manifest" href="/manifest.json">
@@ -865,22 +865,22 @@
 
             <script>
                 const dish_menu = [
-                    { name: "Chicken Dum Biryani (1 Person, 1 Pis Chicken)", price: 130, image: "chicken_biryani_1.jpg" },
+                    { name: "Chicken Dum Biryani (1 Person, 1 Pis Chicken)", price: 130, image: "chicken_biryani_1.webp" },
                     { name: "Veg Dum Biryani (1 Person)", price: 130, image: "veg_biryani_1.jpg" },
                     { name: "Chicken Dum Biryani (2 Person, 2 Pis Chicken, 2 Pis Aloo, 2 Pis Egg)", price: 200, image: "chicken_biryani_2.jpg" },
-                    { name: "Veg Dum Biryani (2 Person)", price: 180, image: "veg_biryani_2.jpg" },
-                    { name: "Chicken Dum Biryani with Chicken Chaap (Combo, 1 Person, 1 Pis Chaap)", price: 390, image: "chicken_combo.jpg" },
-                    { name: "Veg Dum Biryani with Paneer Chaap (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 390, image: "veg_combo.jpg" },
+                    { name: "Veg Dum Biryani (2 Person)", price: 180, image: "veg_biryani_1.jpg" },
+                    { name: "Chicken Dum Biryani with Chicken Chaap (Combo, 1 Person, 1 Pis Chaap)", price: 390, image: "chicken_biryani_2.jpg" },
+                    { name: "Veg Dum Biryani with Paneer Chaap (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 390, image: "veg_biryani_1.jpg" },
                     { name: "Chicken Biryani with Chicken Chaap & Fresh Lime Soda (Combo, 1 Person, 1 Pis Chaap)", price: 200, image: "chicken_meal.jpg" },
-                    { name: "Veg Dum Biryani with Paneer Chaap & Fresh Lime Soda (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 200, image: "veg_meal.jpg" },
-                    { name: "Kolkata Chicken Dum Biryani (5 Person, 5 Pis Chicken, 5 Pis Aloo, 5 Pis Egg)", price: 600, image: "kolkata_chicken_5.jpg" },
-                    { name: "Kolkata Chicken Dum Biryani (10 Person, 10 Pis Chicken, 10 Pis Aloo, 10 Pis Egg)", price: 1200, image: "kolkata_chicken_10.jpg" },
-                    { name: "Kolkata Veg Biryani (5 Person)", price: 550, image: "kolkata_veg_5.jpg" },
-                    { name: "Kolkata Veg Biryani (10 Person)", price: 1100, image: "kolkata_veg_10.jpg" },
-                    { name: "Veg Galouti Kabab (2 Pis)", price: 200, image: "veg_galouti.jpg" },
-                    { name: "Paneer Tikka (5 Pis)", price: 250, image: "paneer_tikka.jpg" },
+                    { name: "Veg Dum Biryani with Paneer Chaap & Fresh Lime Soda (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 200, image: "veg_biryani_1.jpg" },
+                    { name: "Kolkata Chicken Dum Biryani (5 Person, 5 Pis Chicken, 5 Pis Aloo, 5 Pis Egg)", price: 600, image: "kolkata_chicken_5.jpeg" },
+                    { name: "Kolkata Chicken Dum Biryani (10 Person, 10 Pis Chicken, 10 Pis Aloo, 10 Pis Egg)", price: 1200, image: "kolkata_chicken_10.jpeg" },
+                    { name: "Kolkata Veg Biryani (5 Person)", price: 550, image: "veg_biryani_1.jpg" },
+                    { name: "Kolkata Veg Biryani (10 Person)", price: 1100, image: "veg_biryani_1.jpg" },
+                    { name: "Veg Galouti Kabab (2 Pis)", price: 200, image: "veg_galouti.jpeg" },
+                    { name: "Paneer Tikka (5 Pis)", price: 250, image: "paneer_tikka.webp" },
                     { name: "Chicken Tikka (6 Pis)", price: 250, image: "chicken_tikka.jpg" },
-                    { name: "Chicken Malai Tikka (6 Pis)", price: 300, image: "chicken_malai_tikka.jpg" },
+                    { name: "Chicken Malai Tikka (6 Pis)", price: 300, image: "chicken_malai_tikka.jpeg" },
                     { name: "Gulab Jamun (1 Pis)", price: 10, image: "gulab_jamun.jpg" },
                     { name: "Rayta", price: 20, image: "rayta.jpg" },
                     { name: "Green Salad", price: 20, image: "green_salad.jpg" },
@@ -894,7 +894,7 @@
                     <div class="col-6 col-md-3 pl-2 pr-2 featured-outer">
                         <div class="featured-items">
                             <a href="#">
-                                <div class="featured-placeholder"><img src="images/KZ3BoJrKSsZT.jpg"
+                                <div class="featured-placeholder"><img src="./assets/wla_new/img/${item.image}"
                                         alt="" width="84" height="82">
                                     <div class="non-vegflag flag-top"><span></span></div>
                                 </div>
