--- a/about.html
+++ b/about.html
@@ -1529,7 +1529,7 @@
                   </div>
                   <div class="col-md-6">
                      <div class="placeholder-img">
-                        <img src="images/LFtbWwkgqXZ6.jpg" alt="Bikkgane Briyani" width="570" height="320">
+                        <img src="images/wknvpzDeaoph.jpg" alt="Bikkgane Briyani" width="570" height="320">
                      </div>
                   </div>
                </div>
